--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             </div>
 
             <h3 class="text-2xl font-bold mb-4">
-              🧠 Idelizador do Futuro
+              🧠 Idealizador do Futuro
               <span class="text-green-400 text-sm">(NOVO!)</span>
             </h3>
             <p class="text-gray-300 mb-4">
@@ -381,12 +381,13 @@
             </div>
 
             <div class="flex space-x-3">
-              <button
-                onclick="showComingSoon()"
+              <a
+                href="https://deivisan.github.io/Experimentos/DT~Idealizador.html"
+                target="_blank"
                 class="flex-1 bg-green-500 hover:bg-green-600 py-3 rounded-lg font-bold text-center transition-all"
               >
-                <i class="fas fa-rocket mr-2"></i>Em Breve
-              </button>
+                <i class="fas fa-rocket mr-2"></i>Acessar Agora
+              </a>
               <a
                 href="#idelizador-tutorial"
                 class="flex-1 bg-gray-600 hover:bg-gray-700 py-3 rounded-lg font-bold text-center transition-all"
@@ -651,7 +652,7 @@ def gerar_relatorio_vendas(dados):
           <div class="bg-gray-700 p-8 rounded-xl border-2 border-green-500">
             <h3 class="text-3xl font-bold mb-6 flex items-center">
               <i class="fas fa-brain text-green-400 mr-4"></i>
-              Idelizador do Futuro - IA para Ideias de Negócio
+              Idealizador do Futuro - IA para Ideias de Negócio
             </h3>
 
             <div class="space-y-6">
@@ -719,9 +720,12 @@ def gerar_relatorio_vendas(dados):
                   </button>
                   <pre
                     class="text-green-400 text-sm overflow-x-auto"
-                  ><code># 1. Clone o repositório (disponível em breve)
-git clone https://github.com/deivisan/idelizador-futuro
-cd idelizador-futuro
+                  ><code># 1. Acesse o projeto online
+# https://deivisan.github.io/Experimentos/DT~Idealizador.html
+
+# Ou clone o repositório
+git clone https://github.com/Deivisan/Curriculo-Deivison
+cd Curriculo-Deivison/Experimentos
 
 # 2. Instale as dependências
 npm install
@@ -885,8 +889,9 @@ npm run dev</code></pre>
           <p class="mt-2">
             Feito com ❤️ para a comunidade •
             <a
-              href="../FreelancerDeiviTech/"
+              href="https://deivisan.github.io/FreelancerDeiviTech/"
               class="text-green-400 hover:text-green-300"
+              target="_blank"
               >Serviços Comerciais</a
             >
           </p>
@@ -904,7 +909,7 @@ npm run dev</code></pre>
         <h3 class="text-2xl font-bold mb-4">Em Desenvolvimento!</h3>
         <p class="text-gray-300 mb-6">
           O Idelizador do Futuro está sendo finalizado com as mais modernas
-          tecnologias de IA. Em breve você terá acesso completo ao código e
+          tecnologias de IA. Você já tem acesso completo ao código e
           tutoriais.
         </p>
         <button
