🌍 Expansão de parcerias: +3 ONGs para comunidade negra em tech
- Corrigido link Black Girls Code (confirmado funcionando)
- Adicionadas All Star Code, Black Professionals in Tech, Data 4 Black Lives
- Nota sobre expansão futura dos tutoriais para repositório dedicado
- README atualizado com novas parcerias
- Foco em diversidade e inclusão tecnológica

--- a/index.html
+++ b/index.html
@@ -751,6 +751,17 @@
           <span class="gradient-text">Tutoriais Completos</span>
         </h2>
 
+        <div class="bg-blue-900 p-6 rounded-lg mb-12 text-center">
+          <h3 class="text-xl font-bold mb-3">📚 Em Expansão!</h3>
+          <p class="text-gray-300">
+            Esta seção está crescendo! Em breve, todos os tutoriais serão movidos para um repositório dedicado
+            com mais exemplos, exercícios práticos e materiais complementares.
+          </p>
+          <a href="https://github.com/deivisan" target="_blank" class="text-blue-300 hover:text-blue-200 underline mt-2 inline-block">
+            Acompanhe as atualizações no GitHub →
+          </a>
+        </div>
+
         <!-- Web Development Tutorial -->
         <div class="max-w-4xl mx-auto mb-12">
           <div class="bg-gray-700 p-8 rounded-xl">
@@ -1181,6 +1192,39 @@ npm run dev</code></pre>
               Capacitação em tecnologia para meninas negras nos EUA.
             </p>
             <a href="https://www.blackgirlscode.com/" target="_blank" class="text-purple-400 hover:text-purple-300">
+              Conhecer Projeto →
+            </a>
+          </div>
+
+          <div class="bg-gray-700 p-6 rounded-xl text-center">
+            <i class="fas fa-code text-4xl text-yellow-400 mb-4"></i>
+            <h3 class="text-xl font-bold mb-4">All Star Code</h3>
+            <p class="text-gray-300 mb-4">
+              Ensino de ciência da computação para jovens negros e latinos.
+            </p>
+            <a href="https://www.allstarcode.org/" target="_blank" class="text-yellow-400 hover:text-yellow-300">
+              Conhecer Projeto →
+            </a>
+          </div>
+
+          <div class="bg-gray-700 p-6 rounded-xl text-center">
+            <i class="fas fa-network-wired text-4xl text-red-400 mb-4"></i>
+            <h3 class="text-xl font-bold mb-4">Black Professionals in Tech</h3>
+            <p class="text-gray-300 mb-4">
+              Rede de profissionais negros na tecnologia com mentoria e networking.
+            </p>
+            <a href="https://www.blacktechpipeline.com/" target="_blank" class="text-red-400 hover:text-red-300">
+              Conhecer Projeto →
+            </a>
+          </div>
+
+          <div class="bg-gray-700 p-6 rounded-xl text-center">
+            <i class="fas fa-brain text-4xl text-cyan-400 mb-4"></i>
+            <h3 class="text-xl font-bold mb-4">Data 4 Black Lives</h3>
+            <p class="text-gray-300 mb-4">
+              Ciência de dados para criar mudanças positivas na comunidade negra.
+            </p>
+            <a href="https://d4bl.org/" target="_blank" class="text-cyan-400 hover:text-cyan-300">
               Conhecer Projeto →
             </a>
           </div>
