Correções de conteúdo: remoção de projetos não funcionais, correção do LinkedIn e atualização de estatísticas
- Removidos projetos com links 404: Monte Seu Notebook, DeiviTech e Teste Assistente Voz
- Corrigido LinkedIn para o perfil correto: https://br.linkedin.com/in/deivison-santana-4690b81b0
- Atualizado contador de projetos de 10+ para 8+
- Mantida página de parcerias com correção de linguagem (admired organizations)

--- a/comunidade.html
+++ b/comunidade.html
@@ -428,7 +428,7 @@
                 </a>
 
                 <a
-                  href="https://linkedin.com/in/deivison-santana"
+                  href="https://br.linkedin.com/in/deivison-santana-4690b81b0"
                   target="_blank"
                   class="flex items-center p-4 bg-blue-600 hover:bg-blue-700 rounded-lg transition-all"
                 >
@@ -488,7 +488,7 @@
             <i class="fab fa-github text-xl"></i>
           </a>
           <a
-            href="https://linkedin.com/in/deivison-santana"
+            href="https://br.linkedin.com/in/deivison-santana-4690b81b0"
             target="_blank"
             class="text-gray-400 hover:text-white"
           >
