--- a/parcerias.html
+++ b/parcerias.html
@@ -67,11 +67,11 @@
       <div class="absolute inset-0 bg-black opacity-20"></div>
       <div class="container mx-auto px-6 relative z-10 text-center">
         <h1 class="text-5xl font-bold mb-4">
-          <span class="text-white">Parcerias</span>
-          <span class="gradient-text">Estratégicas</span>
+          <span class="text-white">Organizações</span>
+          <span class="gradient-text">Inspiradoras</span>
         </h1>
         <p class="text-2xl mb-8 opacity-90">
-          Juntos construindo um futuro mais inclusivo na tecnologia
+          Conhecendo organizações que fazem a diferença na inclusão digital
         </p>
       </div>
     </header>
@@ -80,35 +80,36 @@
     <section class="py-16 bg-gray-800">
       <div class="container mx-auto px-6">
         <div class="text-center mb-12">
-          <h2 class="text-3xl font-bold mb-6">🌟 Nosso Impacto Coletivo</h2>
+          <h2 class="text-3xl font-bold mb-6">🌟 Nosso Compromisso</h2>
           <p class="text-xl text-gray-300 max-w-4xl mx-auto">
-            Através de parcerias estratégicas, amplificamos nosso alcance e criamos
-            oportunidades reais para comunidades sub-representadas na tecnologia.
+            Embora ainda não tenhamos parcerias formais estabelecidas, admiramos profundamente
+            o trabalho dessas organizações e gostaríamos de contribuir para sua missão de
+            promover inclusão digital e diversidade na tecnologia.
           </p>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div class="impact-metric text-center">
-            <div class="text-4xl font-bold text-green-400 mb-2">6+</div>
-            <div class="text-lg font-semibold mb-2">ONGs Parceiras</div>
+            <div class="text-4xl font-bold text-green-400 mb-2">6</div>
+            <div class="text-lg font-semibold mb-2">ONGs Inspiradoras</div>
             <div class="text-gray-300 text-sm">
-              Organizações dedicadas à inclusão digital e diversidade tech
+              Organizações que admiramos e apoiamos com nossa divulgação
             </div>
           </div>
 
           <div class="impact-metric text-center">
-            <div class="text-4xl font-bold text-blue-400 mb-2">10K+</div>
-            <div class="text-lg font-semibold mb-2">Pessoas Impactadas</div>
+            <div class="text-4xl font-bold text-blue-400 mb-2">🚀</div>
+            <div class="text-lg font-semibold mb-2">Potencial de Parceria</div>
             <div class="text-gray-300 text-sm">
-              Alunos, profissionais e comunidades beneficiadas coletivamente
+              Buscamos conexões genuínas para colaboração futura
             </div>
           </div>
 
           <div class="impact-metric text-center">
-            <div class="text-4xl font-bold text-purple-400 mb-2">∞</div>
-            <div class="text-lg font-semibold mb-2">Potencial de Crescimento</div>
+            <div class="text-4xl font-bold text-purple-400 mb-2">💙</div>
+            <div class="text-lg font-semibold mb-2">Apoio Comunitário</div>
             <div class="text-gray-300 text-sm">
-              Cada parceria abre portas para novas possibilidades
+              Divulgamos causas que acreditamos e apoiamos
             </div>
           </div>
         </div>
@@ -119,10 +120,11 @@
     <section class="py-16">
       <div class="container mx-auto px-6">
         <div class="text-center mb-12">
-          <h2 class="text-3xl font-bold mb-6">🤝 Nossas Parcerias</h2>
+          <h2 class="text-3xl font-bold mb-6">🤝 Organizações que Admiramos</h2>
           <p class="text-xl text-gray-300 max-w-4xl mx-auto">
-            Trabalhamos lado a lado com organizações que compartilham nossa visão
-            de um mundo mais inclusivo e acessível através da tecnologia.
+            Conhecemos e apoiamos o trabalho dessas organizações que compartilham nossa visão
+            de um mundo mais inclusivo através da tecnologia. Gostaríamos de estabelecer
+            conexões genuínas para colaboração futura.
           </p>
         </div>
 
@@ -146,12 +148,12 @@
             </p>
 
             <div class="bg-pink-900 p-4 rounded mb-6">
-              <h4 class="font-bold mb-2">🎯 Colaboração:</h4>
+              <h4 class="font-bold mb-2">💙 Por que admiramos:</h4>
               <ul class="text-sm space-y-1">
-                <li>✅ Compartilhamento de currículos e materiais educacionais</li>
-                <li>✅ Participação em eventos e workshops conjuntos</li>
-                <li>✅ Mentoria técnica para alunas do programa</li>
-                <li>✅ Desenvolvimento de projetos colaborativos</li>
+                <li>✅ Foco em empoderamento de meninas negras</li>
+                <li>✅ Programas gratuitos de codificação</li>
+                <li>✅ Impacto global na diversidade tech</li>
+                <li>✅ Metodologia comprovada de sucesso</li>
               </ul>
             </div>
 
@@ -190,12 +192,12 @@
             </p>
 
             <div class="bg-blue-900 p-4 rounded mb-6">
-              <h4 class="font-bold mb-2">🎯 Colaboração:</h4>
+              <h4 class="font-bold mb-2">💙 Por que admiramos:</h4>
               <ul class="text-sm space-y-1">
-                <li>✅ Tradução e adaptação de materiais para português</li>
-                <li>✅ Compartilhamento de metodologias de ensino</li>
-                <li>✅ Participação em programas de intercâmbio educacional</li>
-                <li>✅ Desenvolvimento de ferramentas educacionais conjuntas</li>
+                <li>✅ Foco em jovens negros e latinos</li>
+                <li>✅ Educação gratuita em codificação</li>
+                <li>✅ Metodologia prática e acessível</li>
+                <li>✅ Resultados comprovados em empregabilidade</li>
               </ul>
             </div>
 
@@ -234,12 +236,12 @@
             </p>
 
             <div class="bg-green-900 p-4 rounded mb-6">
-              <h4 class="font-bold mb-2">🎯 Colaboração:</h4>
+              <h4 class="font-bold mb-2">💙 Por que admiramos:</h4>
               <ul class="text-sm space-y-1">
-                <li>✅ Participação em eventos e conferências</li>
-                <li>✅ Programas de mentoria técnica</li>
-                <li>✅ Compartilhamento de oportunidades de emprego</li>
-                <li>✅ Desenvolvimento de conteúdo educacional conjunto</li>
+                <li>✅ Comunidade global de profissionais negros</li>
+                <li>✅ Foco em networking e mentoria</li>
+                <li>✅ Oportunidades de desenvolvimento profissional</li>
+                <li>✅ Representação na indústria tech</li>
               </ul>
             </div>
 
@@ -278,12 +280,12 @@
             </p>
 
             <div class="bg-purple-900 p-4 rounded mb-6">
-              <h4 class="font-bold mb-2">🎯 Colaboração:</h4>
+              <h4 class="font-bold mb-2">💙 Por que admiramos:</h4>
               <ul class="text-sm space-y-1">
-                <li>✅ Desenvolvimento de ferramentas de análise de dados</li>
-                <li>✅ Workshops sobre dados e justiça social</li>
-                <li>✅ Projetos de visualização de dados educacionais</li>
-                <li>✅ Pesquisa colaborativa sobre inclusão digital</li>
+                <li>✅ Uso de dados para justiça social</li>
+                <li>✅ Capacitação em ciência de dados</li>
+                <li>✅ Foco em comunidades negras</li>
+                <li>✅ Abordagem inovadora contra injustiças</li>
               </ul>
             </div>
 
@@ -322,12 +324,12 @@
             </p>
 
             <div class="bg-orange-900 p-4 rounded mb-6">
-              <h4 class="font-bold mb-2">🎯 Colaboração:</h4>
+              <h4 class="font-bold mb-2">💙 Por que admiramos:</h4>
               <ul class="text-sm space-y-1">
-                <li>✅ Adaptação de currículos para o mercado brasileiro</li>
-                <li>✅ Programas de formação conjunta</li>
-                <li>✅ Compartilhamento de metodologias de ensino</li>
-                <li>✅ Desenvolvimento de projetos sociais colaborativos</li>
+                <li>✅ Foco em mulheres de baixa renda</li>
+                <li>✅ Formação intensiva em desenvolvimento web</li>
+                <li>✅ Inserção no mercado de trabalho</li>
+                <li>✅ Modelo sustentável e replicável</li>
               </ul>
             </div>
 
@@ -366,12 +368,12 @@
             </p>
 
             <div class="bg-red-900 p-4 rounded mb-6">
-              <h4 class="font-bold mb-2">🎯 Colaboração:</h4>
+              <h4 class="font-bold mb-2">💙 Por que admiramos:</h4>
               <ul class="text-sm space-y-1">
-                <li>✅ Participação em programas de verão</li>
-                <li>✅ Desenvolvimento de currículos educacionais</li>
-                <li>✅ Mentoria técnica para alunas</li>
-                <li>✅ Eventos de conscientização sobre carreiras em tech</li>
+                <li>✅ Fechar a lacuna de gênero na tecnologia</li>
+                <li>✅ Programas gratuitos para meninas</li>
+                <li>✅ Foco no ensino médio</li>
+                <li>✅ Resultados comprovados em participação feminina</li>
               </ul>
             </div>
 
@@ -395,15 +397,15 @@
 
         <!-- Call to Action -->
         <div class="text-center mt-16 bg-gradient-to-r from-green-600 to-blue-600 p-8 rounded-xl">
-          <h3 class="text-3xl font-bold mb-4">🤝 Interessado em Parceria?</h3>
+          <h3 class="text-3xl font-bold mb-4">🤝 Interessado em Futura Parceria?</h3>
           <p class="text-xl mb-6">
             Se sua organização trabalha com inclusão digital e diversidade na tecnologia,
-            vamos conversar sobre como podemos colaborar!
+            adoraríamos conhecer seu trabalho e explorar possibilidades de colaboração futura!
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <a href="mailto:deivison.santana@example.com?subject=Proposta de Parceria - Filantropia DeiviTech"
+            <a href="https://wa.me/5575981231019?text=Olá! Vi as organizações que você admira na Filantropia DeiviTech. Gostaria de conversar sobre possíveis colaborações futuras."
                class="bg-white text-gray-900 px-8 py-3 rounded-lg font-bold hover:bg-gray-100 transition-all">
-              <i class="fas fa-handshake mr-2"></i>Propor Parceria
+              <i class="fas fa-handshake mr-2"></i>Conversar sobre Parcerias
             </a>
             <a href="comunidade.html" class="bg-gray-800 text-white px-8 py-3 rounded-lg font-bold hover:bg-gray-700 transition-all">
               <i class="fas fa-users mr-2"></i>Ver Comunidade
@@ -433,7 +435,7 @@
             <i class="fab fa-github text-xl"></i>
           </a>
           <a
-            href="https://linkedin.com/in/deivison-santana"
+            href="https://br.linkedin.com/in/deivison-santana-4690b81b0"
             target="_blank"
             class="text-gray-400 hover:text-white"
           >
