--- a/projetos.html
+++ b/projetos.html
@@ -150,55 +150,6 @@
             </div>
           </div>
 
-          <!-- Monte Seu Notebook -->
-          <div class="service-card bg-gray-800 p-8 rounded-xl">
-            <div
-              class="project-showcase h-48 bg-gradient-to-r from-green-500 to-blue-600 flex items-center justify-center mb-6 relative"
-            >
-              <i class="fas fa-laptop text-6xl text-white"></i>
-              <div class="project-overlay">
-                <div class="text-center">
-                  <i class="fas fa-external-link-alt text-3xl text-white mb-2"></i>
-                  <p class="text-white font-bold">Ver Demonstração</p>
-                </div>
-              </div>
-            </div>
-
-            <h3 class="text-2xl font-bold mb-4">💻 Configurador de Notebook</h3>
-            <p class="text-gray-300 mb-4">
-              Sistema interativo para personalização de notebooks com
-              calculadora em tempo real e comparação de preços.
-            </p>
-
-            <div class="bg-green-900 p-4 rounded mb-4">
-              <h4 class="font-bold mb-2">📚 O que você aprende:</h4>
-              <ul class="text-sm space-y-1">
-                <li>✅ JavaScript modular e orientado a objetos</li>
-                <li>✅ Manipulação dinâmica do DOM</li>
-                <li>✅ Sistemas de configuração complexos</li>
-                <li>✅ Calculadoras interativas</li>
-                <li>✅ UX/UI para e-commerce</li>
-              </ul>
-            </div>
-
-            <div class="flex space-x-3">
-              <a
-                href="https://deivisan.github.io/DeiviTech-Monte-Seu-Notebook/"
-                target="_blank"
-                class="flex-1 bg-blue-500 hover:bg-blue-600 py-3 rounded-lg font-bold text-center transition-all"
-              >
-                <i class="fas fa-eye mr-2"></i>Ver Demo
-              </a>
-              <a
-                href="https://github.com/deivisan/DeiviTech-Monte-Seu-Notebook"
-                target="_blank"
-                class="flex-1 bg-gray-600 hover:bg-gray-700 py-3 rounded-lg font-bold text-center transition-all"
-              >
-                <i class="fab fa-github mr-2"></i>Código
-              </a>
-            </div>
-          </div>
-
           <!-- Automation Scripts -->
           <div class="service-card bg-gray-800 p-8 rounded-xl">
             <div
@@ -345,55 +296,6 @@
             </div>
           </div>
 
-          <!-- Site Institucional DeiviTech -->
-          <div class="service-card bg-gray-800 p-8 rounded-xl">
-            <div
-              class="project-showcase h-48 bg-gradient-to-r from-teal-500 to-emerald-600 flex items-center justify-center mb-6 relative"
-            >
-              <i class="fas fa-building text-6xl text-white"></i>
-              <div class="project-overlay">
-                <div class="text-center">
-                  <i class="fas fa-external-link-alt text-3xl text-white mb-2"></i>
-                  <p class="text-white font-bold">Ver Site</p>
-                </div>
-              </div>
-            </div>
-
-            <h3 class="text-2xl font-bold mb-4">🏢 Site Institucional DeiviTech</h3>
-            <p class="text-gray-300 mb-4">
-              Site corporativo completo com seções de serviços, portfólio,
-              contato e integração com sistemas de gestão.
-            </p>
-
-            <div class="bg-green-900 p-4 rounded mb-4">
-              <h4 class="font-bold mb-2">📚 O que você aprende:</h4>
-              <ul class="text-sm space-y-1">
-                <li>✅ Desenvolvimento de sites institucionais</li>
-                <li>✅ Estruturação de conteúdo corporativo</li>
-                <li>✅ Formulários e validação</li>
-                <li>✅ SEO para empresas</li>
-                <li>✅ Design system consistente</li>
-              </ul>
-            </div>
-
-            <div class="flex space-x-3">
-              <a
-                href="https://deivisan.github.io/deivitech/"
-                target="_blank"
-                class="flex-1 bg-teal-500 hover:bg-teal-600 py-3 rounded-lg font-bold text-center transition-all"
-              >
-                <i class="fas fa-eye mr-2"></i>Ver Site
-              </a>
-              <a
-                href="https://github.com/deivisan/deivitech"
-                target="_blank"
-                class="flex-1 bg-gray-600 hover:bg-gray-700 py-3 rounded-lg font-bold text-center transition-all"
-              >
-                <i class="fab fa-github mr-2"></i>Código
-              </a>
-            </div>
-          </div>
-
           <!-- Portfolio Pessoal -->
           <div class="service-card bg-gray-800 p-8 rounded-xl">
             <div
@@ -492,55 +394,6 @@
             </div>
           </div>
 
-          <!-- Teste Assistente Voz -->
-          <div class="service-card bg-gray-800 p-8 rounded-xl">
-            <div
-              class="project-showcase h-48 bg-gradient-to-r from-cyan-500 to-blue-600 flex items-center justify-center mb-6 relative"
-            >
-              <i class="fas fa-microphone text-6xl text-white"></i>
-              <div class="project-overlay">
-                <div class="text-center">
-                  <i class="fas fa-external-link-alt text-3xl text-white mb-2"></i>
-                  <p class="text-white font-bold">Ver Demo</p>
-                </div>
-              </div>
-            </div>
-
-            <h3 class="text-2xl font-bold mb-4">🎤 Assistente de Voz</h3>
-            <p class="text-gray-300 mb-4">
-              Protótipo de assistente virtual por voz com reconhecimento de fala,
-              síntese de voz e integração com comandos do sistema.
-            </p>
-
-            <div class="bg-green-900 p-4 rounded mb-4">
-              <h4 class="font-bold mb-2">📚 O que você aprende:</h4>
-              <ul class="text-sm space-y-1">
-                <li>✅ Reconhecimento de voz (Speech-to-Text)</li>
-                <li>✅ Síntese de voz (Text-to-Speech)</li>
-                <li>✅ Processamento de linguagem natural</li>
-                <li>✅ Integração com APIs de IA</li>
-                <li>✅ Automação por voz</li>
-              </ul>
-            </div>
-
-            <div class="flex space-x-3">
-              <a
-                href="https://deivisan.github.io/Teste-assitentevoz/"
-                target="_blank"
-                class="flex-1 bg-cyan-500 hover:bg-cyan-600 py-3 rounded-lg font-bold text-center transition-all"
-              >
-                <i class="fas fa-eye mr-2"></i>Ver Demo
-              </a>
-              <a
-                href="https://github.com/deivisan/Teste-assitentevoz"
-                target="_blank"
-                class="flex-1 bg-gray-600 hover:bg-gray-700 py-3 rounded-lg font-bold text-center transition-all"
-              >
-                <i class="fab fa-github mr-2"></i>Código
-              </a>
-            </div>
-          </div>
-
           <!-- Perfil Profissional -->
           <div class="service-card bg-gray-800 p-8 rounded-xl">
             <div
@@ -624,7 +477,7 @@
             <i class="fab fa-github text-xl"></i>
           </a>
           <a
-            href="https://linkedin.com/in/deivison-santana"
+            href="https://br.linkedin.com/in/deivison-santana-4690b81b0"
             target="_blank"
             class="text-gray-400 hover:text-white"
           >
