--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
             <h3 class="text-2xl font-bold mb-4">Projetos Open Source</h3>
             <p class="text-gray-300 mb-6">
-              Explore meus 10+ repositórios públicos com código fonte completo
+              Explore meus 8+ repositórios públicos com código fonte completo
               e tutoriais detalhados.
             </p>
             <span class="text-green-400 font-bold group-hover:text-green-300 transition-colors">
@@ -286,7 +286,7 @@
             <i class="fab fa-github text-xl"></i>
           </a>
           <a
-            href="https://linkedin.com/in/deivison-santana"
+            href="https://br.linkedin.com/in/deivison-santana-4690b81b0"
             target="_blank"
             class="text-gray-400 hover:text-white"
           >
