--- a/tutoriais.html
+++ b/tutoriais.html
@@ -641,7 +641,7 @@ if __name__ == "__main__":
             <i class="fab fa-github text-xl"></i>
           </a>
           <a
-            href="https://linkedin.com/in/deivison-santana"
+            href="https://br.linkedin.com/in/deivison-santana-4690b81b0"
             target="_blank"
             class="text-gray-400 hover:text-white"
           >
